tests/ui/type-alias-enum-variants/incorrect-variant-form-through-Self-issue-58006.stderr
error[E0533]: expected unit struct, unit variant or constant, found tuple variant `Self::A`
  --> $DIR/incorrect-variant-form-through-Self-issue-58006.rs:8:13
   |
LL |             Self::A => (),
   |             ^^^^^^^ not a unit struct, unit variant or constant

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0533`.
